<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_record"
        android:enabled="true"
        android:title="@string/record"
        android:icon="@drawable/ic_notification_icon"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_files"
        android:enabled="true"
        android:title="@string/files"
        android:icon="@drawable/ic_records_list"
        app:showAsAction="ifRoom"/>
</menu>